--- a/share-pics/index.html
+++ b/share-pics/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://npmcdn.com/moralis@0.0.5/dist/moralis.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
