changes to new pr

--- a/angular-moralis/src/index.html
+++ b/angular-moralis/src/index.html
@@ -13,8 +13,8 @@
   <!-- Moralis -->
   <!-- Note -->
   <!-- You can use npm info moralis versions to obtain a list of the available versions and replace <VERSION> below with the latest value. -->
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-  <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+ <!-- <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <script src="https://unpkg.com/moralis/dist/moralis.js"></script>  -->
 
 </head>
 <body>
