--- a/token-price-charts/index.html
+++ b/token-price-charts/index.html
@@ -3,7 +3,7 @@
     <title>Crypto Price History Boilerplate</title>
 
 	  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="https://unpkg.com/moralis@0.0.64/dist/moralis.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
 
@@ -28,9 +28,10 @@
 
   <script>
 
-    //ADD Your moralis AddID and Serve Url HERE:
-    Moralis.initialize("App ID");
-    Moralis.serverURL = "Server URL";
+    const serverUrl = "INSERT_SERVER_URL"; //Server url from moralis.io
+    const appId = "INSERT_APP_ID"; // Application id from moralis.io
+    Moralis.start({ serverUrl, appId });
+    
     let toks = [];
 
 
@@ -94,7 +95,7 @@
       async function login() {
         let user = Moralis.User.current();
         if (!user) {
-          user = await Moralis.Web3.authenticate();
+          user = await Moralis.authenticate();
         }
         console.log("logged in user:", user);
       }
